https://numworx.atlassian.net/browse/DWOWISK-239
met maxFactor in de opdrachten